# Miro

./: .gitignore  AUTHORS  CMakeLists.txt  CMakePack.txt  ChangeLog  INSTALL  README  README.md  RELEASENOTES  package.xml
cmake/: Miro-extras.cmake.develspace.in  Miro-extras.cmake.installspace.in  Miro.UserOptions.cmake.windows  config.h.in
cmake/Modules/: DebSourcePPA.cmake  FindACE.cmake  FindJsonCpp.cmake  FindMiro.cmake  FindTAO.cmake  GenerateMiroMakeParams.cmake  GenerateTaoIdl.cmake  IrgPackageFind.cmake  SetupInstall.cmake  SimplePackageFind.cmake
cmake/postinstall/: CMakeLists.txt
doc/: Makefile.am
doc/fig/: .cvsignore  Makefile.am  Miro_behaviours.fig  client_server.fig  client_server_low_level.fig  federatedchannel.fig  filterchain.fig  filtergraph.fig  filtergraphillegal.fig  filtergraphlegal.fig  filtertree.fig  grid_coords.fig  laserServer.fig  pincolla.ps  signature.ps
doc/html/: .cvsignore  ACE.tag  Makefile.am  TAO.tag  doxygen.cpp.in  doxygen.idl.in
doc/tex/: .cvsignore  Generic_header.cpp  Makefile.am  behaviourEngine.tex  blank.tex  clients.tex  definitions.tex  doxygen.conf.tmpl  event_channel_logging.tex  group_communication.tex  install.tex  logging.tex  miro_manual.bib  miro_manual.tex  miro_reference.tex  new_project.tex  parameters.tex  qtLaser.ps  qtSonar.ps  servers.tex  styleguide.tex  tex_definitions.tex  using.tex  video.tex  writing_a_client.tex  writing_a_server.tex
dtd/: Makefile.am  PolicyConfig.dtd
examples/: CMakeLists.txt
examples/ami/: Ami.cpp  Ami.h  Ami.idl  AmiCallbackImpl.cpp  AmiCallbackImpl.h  AmiImpl.cpp  AmiImpl.h  CMakeLists.txt  ami_client_example.cpp  ami_colocated_example.cpp  ami_server_example.cpp
examples/basic/: Basic.h  Basic.idl  BasicImpl.cpp  BasicImpl.h  CMakeLists.txt  basic_client_example.cpp  basic_server_example.cpp
examples/dynamicCORBA/: CMakeLists.txt  CORBA_Types.idl  dynBasic.cpp  generic_consumer.cpp  parse_any.cpp
examples/hello/: CMakeLists.txt  HelloWorld.idl  HelloWorldImpl.cpp  HelloWorldImpl.h  hello_world_client.cpp  hello_world_colocated.cpp  hello_world_server.cpp
examples/log/: CMakeLists.txt  log_output.cpp
examples/notify/: .cvsignore  CMakeLists.txt  Payload.idl  basic_consumer.cpp  basic_supplier.cpp  notify_consumer.cpp  notify_supplier.cpp
examples/params/: .cvsignore  CMakeLists.txt  SimpleSurveyParameters.xml  convertParams.cpp  example.json  example.xml  testConvertParams.sh
performance-tests/: Makefile.am
performance-tests/logging/: .cvsignore  LogPerformance.cpp  Makefile.am  Payload.idl  SharedBeliefState.idl  test-run
scripts/: addheader.sh  generateChangeLog.sh
src/: CMakeLists.txt
src/makeParams/: .cvsignore  CMakeLists.txt  MakeParams.cpp  README  qt_compatibility.h
src/miro/: .cvsignore  AmiHandler.cpp  AmiHandler.h  AmiHelper.cpp  AmiHelper.h  Angle.cpp  Angle.h  Angle.i  AnyPrinter.cpp  AnyPrinter.h  CMakeLists.miro.txt  CMakeLists.miroBase.txt  CMakeLists.miroCore.txt  CMakeLists.miroJson.txt  CMakeLists.miroXml.txt  CMakeLists.txt  Client.cpp  Client.h  ClientData.cpp  ClientData.h  ClientParameters.h  CmdLog.cpp  CmdLog.h  ConfigDocument.cpp  ConfigDocument.h  ConfigParameters.xml  Configuration.cpp  Configuration.h  Enumeration.cpp  Enumeration.h  EnumerationMultiple.cpp  EnumerationMultiple.h  Exception.cpp  Exception.h  JsonCpp.h  JsonParse.cpp  JsonParse.h  JsonParseAce.cpp  JsonParseAce.h  Log.cpp  (+63 more)
src/params/: .cvsignore  CMakeLists.txt  Generator.cpp  Generator.h  Makefile.am  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  TextErrorHandler.cpp  TextErrorHandler.h  Type.cpp  Type.h  qt_compatibility.h
templates/: header-template-Makefile  header-template-cpp  header-template-h  header-template-idl  search_miro.m4
tests/: CMakeLists.txt
tests/bidir/: BiDir.idl  BiDirImpl.cpp  BiDirImpl.h  CMakeLists.txt  biDirClient.cpp  biDirServer.cpp
tests/client/: CMakeLists.txt  clientConfiguration.xml  client_parameters.cpp  client_path_test.cpp  multiple_clients_test.cpp  nestedConfiguration.xml  roundtriptimeout.cpp  validateconnection.cpp
tests/log/: .cvsignore  (+1 more)
tests/notify/: .cvsignore  CMakeLists.txt  Event.idl  admin_qos.cpp  event_payload.cpp  offer_change.cpp  offer_list.cpp  offer_size.cpp  offer_subscribe.cpp  subscription_list.cpp  test_consumer.cpp  test_supplier.cpp  type_code_size.cpp
tests/notifyMulticast/: .cvsignore  Makefile.am  MulticastAdapter.cpp  NotifyMulticastTest.cpp  NotifyMulticastTest.h  README
tests/singleton/: CMakeLists.txt  test_miroSingleton.cpp  test_namingRepositorySingleton.cpp  test_repositorySingleton.cpp  test_singleton.cpp
tests/singleton/libA/: CMakeLists.txt  libA.cpp  libA.h  libA_Export.h
tests/singleton/libB/: CMakeLists.txt  libB.cpp  libB.h  libB_Export.h
tests/singleton/libC/: CMakeLists.txt  libC.cpp  libC.h  libC_Export.h
utils/: CMakeLists.txt
utils/ConfigEditor/: .cvsignore  CMakeLists.txt  ConfigDocumentXML.cpp  ConfigDocumentXML.h  ConfigEditor.cpp  MainWindow.cpp  MainWindow.h  ParameterInstance.cpp  ParameterInstance.h  ParameterSingleton.cpp  ParameterSingleton.h  Section.cpp  Section.h  TODO
utils/LogPlayer/: .cvsignore  CMakeLists.txt  ChannelManager.cpp  ChannelManager.h  EventView.cpp  EventView.h  FileSet.cpp  FileSet.h  LOG128.xpm  LogFile.cpp  LogFile.h  LogPlayer.cpp  MainForm.cpp  MainForm.h  README  time2date.cpp
utils/miroWidgets/: .cvsignore  CMakeLists.txt  CompoundParameter.cpp  CompoundParameter.h  ConfigFile.cpp  ConfigFile.h  DeferredParameterEdit.cpp  DeferredParameterEdit.h  DialogXML.cpp  DialogXML.h  DocumentView.cpp  DocumentView.h  DocumentXML.cpp  DocumentXML.h  FileListDialog.cpp  FileListDialog.h  Item.cpp  Item.h  ItemXML.cpp  ItemXML.h  OkCancelDialog.cpp  OkCancelDialog.h  ParameterDialog.cpp  ParameterDialog.h  ParameterEdit.cpp  ParameterEdit.h  ParameterList.cpp  ParameterList.h  ParameterListDialog.cpp  ParameterListDialog.h  ParameterXML.cpp  ParameterXML.h  SimpleParameter.cpp  SimpleParameter.h  SimpleParameterEdit.cpp  SimpleParameterEdit.h  SingleParameterDialog.cpp  SingleParameterDialog.h  Validators.cpp  Validators.h  (+2 more)
(+5 files in other folders)
