<?xml version="1.0"?>

<!-- http://www.ros.org/reps/rep-0134.html -->

<package format="2">
  <name>Miro</name>
  <version>3.0.0</version>
  <description>The Middleware for Robots</description>
  <maintainer email="hans.utz@gmx.de">Hans Utz</maintainer>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
  
  <build_depend>irg_cmake</build_depend>
  
  <depend>libqt4-dev</depend>

  <depend>libace-dev</depend>

</package>
