## -*- Makefile -*- ##########################################################
##
## This file is part of Miro (The Middleware For Robots)
##
## $Id$
##
## Miro/doc/Makefile.am
##
##############################################################################


if COND_TEXDOC
texdocdirs = fig tex
endif

if COND_HTMLDOC
htmldocdirs = html
endif

SUBDIRS = $(texdocdirs) $(htmldocdirs)
