## -*- Makefile -*- ##########################################################
##
## This file is part of Miro (The Middleware For Robots)
##
## $Id$
##
## Miro/dtd/Makefile.am
##
##############################################################################


include $(top_srcdir)/config/Make-rules

dtddata = \
	PolicyConfig.dtd

dtddir = $(prefix)/dtd
dtd_DATA = $(dtddata)

EXTRA_DIST = $(dtddata)
